--- a/templates/login.html
+++ b/templates/login.html
@@ -21,42 +21,7 @@
 
     <div class="container" id="infoContainer">
         {% include 'welcome.inc' with context %}
-        <form id="loginForm" class="form" method="POST" action="/">
-            <div class="form-group">
-                <label for="loginEmail">Email:</label>
-                <div class="input-container">
-                    <input type="email" id="loginEmail" name="email" placeholder="Enter your email" required autocomplete="off">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="loginPassword">Password:</label>
-                <div class="input-container">
-                    <input type="password" id="loginPassword" name="password" placeholder="Enter your password" required autocomplete="new-password">
-                    <span class="toggle-password"><i class="fas fa-eye"></i></span>
-                </div>
-            </div>
-            <button type="submit">Login</button>
-        </form>
-    </div>
-
-    <div class="container hidden" id="loginContainer">
-        <h2>Login</h2>
-        <form id="loginForm" class="form" method="POST" action="/">
-            <div class="form-group">
-                <label for="loginEmail">Email:</label>
-                <div class="input-container">
-                    <input type="email" id="loginEmail" name="email" placeholder="Enter your email" required autocomplete="off">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="loginPassword">Password:</label>
-                <div class="input-container">
-                    <input type="password" id="loginPassword" name="password" placeholder="Enter your password" required autocomplete="new-password">
-                    <span class="toggle-password"><i class="fas fa-eye"></i></span>
-                </div>
-            </div>
-            <button type="submit">Login</button>
-        </form>
+        <!-- Removed duplicate login form, as roles.inc provides it -->
     </div>
 
     <div class="container hidden" id="forgotPasswordContainer">
